fix instagram link

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
       <ul id='social'>
         <li>Twitter: <a target="_blank" class="twitter" href="http://twitter.com/realtron"><span>realtron</span></a></li>
-        <li>Instagram: <a target="_blank" class="instagram" href="http://twitter.com/neiltron"><span>neiltron</span></a></li>
+        <li>Instagram: <a target="_blank" class="instagram" href="http://instagram.com/neiltron"><span>neiltron</span></a></li>
         <li>Github: <a target="_blank" href="http://github.com/neiltron"><span>neiltron</span></a></li>
         <li>Dribbble: <a target="_blank" class="instagram" href="http://dribbble.com/realtron"><span>realtron</span></a></li>
       </ul>
